--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -452,3 +452,11 @@ max-width: 85rem;
     display: none;
   }
 }
+
+.additional-context {
+  font-size: 0.875rem;
+  color: #666;
+  margin-top: 1rem;
+  line-height: 1.5;
+  max-width: 100%;
+}
