--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -168,10 +168,10 @@
 .contact-form button {
   align-self: center;
   padding: 0.75rem 2rem;
-  background: linear-gradient(90deg, #f26393, #9d62f2);
+  background: linear-gradient(170deg, #c485d7, #d791cc);
   color: #ffffff;
   font-weight: bold;
-  border: none;
+  border: rgb(214, 124, 124) 1px solid;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: background 0.3s ease, transform 0.2s ease;
@@ -180,7 +180,9 @@
 
 .contact-form button:hover {
   transform: scale(1.05);
-  background: linear-gradient(90deg, #e25484, #8141e6);
+  background: linear-gradient(90deg, #efced9, #8141e6);
+  box-shadow: 0 0.5rem 1.25rem rgba(185, 140, 200, 0.4);
+
 }
 
 /* === CONTACT PAGE MOBILE === */
