Added SoulCode-inspired color theme updates

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -34,7 +34,7 @@
 .hero-script {
   font-family: 'Playfair Display', serif;
   font-size: 1rem;
-  color: #9d62f2;
+  color: #5d4f6f;
   margin-bottom: 1rem;
   text-align: center;
 }
@@ -43,7 +43,7 @@
 .shift-message {
   font-family: 'Playfair Display', serif;
   font-size: 1rem;
-  color: #7e6b77;
+  color: #5d4f6f;
   line-height: 1.8;
   margin: 0 auto 1.5rem;
   text-align: center;
