--- a/src/components/service.css
+++ b/src/components/service.css
@@ -132,7 +132,7 @@
   font-style: italic;
   font-family: 'Playfair Display', serif;
   font-size: 2rem;
-  color: #9d62f2;
+  color: #5d4f6f;
   margin-bottom: 0.5rem;
 }
 
